[workspace]
resolver = "2"
members = [
    "src/uactor",
]

[workspace.dependencies]
tokio = { version = "1.35.0", features = ["net", "sync", "time", "rt", "macros", "rt-multi-thread"] }
futures = "0.3"

# errors
thiserror = "2"
anyhow = { version = "1.0", features = ["backtrace"] }

# tracing
tracing = "0.1"

# json
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"

derive_more = { version = "1", features = ["full"] }
derive-new = "0.7"
