[workspace]
resolver = "2"
members = [
    "src/uactor",
]

[workspace.dependencies]
tokio = { version = "1.35.0", features = ["net", "sync", "time", "rt", "macros", "rt-multi-thread"] }
futures = "0.3"

# errors
thiserror = "2"
anyhow = { version = "1.0", features = ["backtrace"] }

# tracing
tracing = "0.1"

# json

derive_more = { version = "1", features = ["full"] }
