[package]
name = "uactor"
version = "0.9.1"
edition = "2021"
repository = "https://github.com/EnvOut/uactor"
license = "MIT"
readme = "../../README.md"
keywords = ["actor", "actor-system", "stream", "actor-stream", "spawn-process"]
workspace = "../../"
description = "The fastest and most modular actor system that doesn’t force you to pay for what you don’t need"

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
paste = "1.0"
derive_more = { workspace = true }
bytes = { version = "1", optional = true }
rand = "0.8"

[dev-dependencies]
tracing-subscriber = { version = "0.3" }
anyhow = "1"
time = "0.3"
tokio = { version = "1.35.1", features = ["full"] }

[[example]]
name = "base_sample"

[features]
async_sender = []