[package]
name = "uactor"
version = "0.10.4"
edition = "2021"
repository = "https://github.com/EnvOut/uactor"
license = "MIT"
readme = "../../README.md"
keywords = ["actor", "actor-system", "stream", "actor-stream", "spawn-process"]
workspace = "../../"
description = "The fastest and most modular actor system that doesn't force you to pay for what you don't need"

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
paste = "1.0"
derive_more = { workspace = true }
derive-new = { workspace = true }
bytes = { version = "1", optional = true }
rand = "0.8"

either = "1.13.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3" }
anyhow = "1"
time = "0.3"
tokio.workspace = true

[[example]]
name = "multiple_incoming_channels"

[[example]]
name = "dependency_injection"

[[example]]
name = "interval"

[[example]]
name = "single_channel_actor"

[[example]]
name = "supervised_actor"

[features]
default = ["tokio_tracing"]
async_sender = []
tokio_tracing = []