[package]
name = "uactor"
version = "0.14.1"
edition = "2021"
repository = "https://github.com/EnvOut/uactor"
license = "MIT"
readme = "../../README.md"
keywords = ["actor", "actor-system", "stream", "actor-stream", "spawn-process"]
workspace = "../../"
description = "The fastest and most modular actor system that doesn't force you to pay for what you don't need"

[dependencies]
tokio = { workspace = true }
tokio-stream = "0.1"
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
paste = "1.0"
derive_more = { workspace = true }
bytes = { version = "1", optional = true }
lazy_static = "1.5.0"

[dev-dependencies]
more-asserts = "0.3.1"
tracing-subscriber = { version = "0.3" }
anyhow = "1"
time = "0.3"
tokio.workspace = true

[[example]]
name = "multiple_incoming_channels"

[[example]]
name = "dependency_injection"

[[example]]
name = "interval"

[[example]]
name = "single_channel_actor"

[[example]]
name = "supervised_actor"

[features]
default = ["tokio_tracing", "enable_spawn_macros"]
async_sender = []
tokio_tracing = []
enable_spawn_macros = []